# tremana

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  HISTORY.md  Makefile  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: autoupdate-pre-commit-config.yml  test.yml
docs/: Makefile  api_docs.rst  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: __init__.py  test_exceptions.py  test_tremana.py  test_warnings.py
tests/analysis/: test_metrics.py  test_transformations.py
tests/data/paper_data/: readme.md
tests/data/paper_data/Edwards1999/: Fig1_a.csv  Fig1_b.csv
tests/parsers/devices/: test_somnowatch.py
tests/util/: test_dataframe_helper.py  test_io.py
tests/utils/: test_dataframe_helper.py  test_io.py
tremana/: __init__.py  cli.py  exceptions.py  warnings.py
tremana/analysis/: __init__.py  metrics.py  transformations.py
tremana/parsers/: __init__.py
tremana/parsers/devices/: __init__.py  somnowatch.py
tremana/util/: __init__.py  dataframe_helper.py  io.py
