[metadata]
name = tremana
version = attr: tremana.__version__
description = Medical tremor analysis package (e.g. for parkinsonian tremor)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/s-weigand/tremana
author = Sebastian Weigand
author_email = s.weigand.phy@gmail.com
license = Apache Software License 2.0
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
keywords = tremana
project_urls =
    Documentation=https://tremana.readthedocs.io/en/latest/
    Source=https://github.com/s-weigand/tremana
    Tracker=https://github.com/s-weigand/tremana/issues

[options]
packages = find:
install_requires =
    Click>=7.0
    PyYAML>=5.4.0
    matplotlib>=3.0
    numpy>=1.19.5
    pandas>=1.2.0
    scipy>=1.6.2
python_requires = >=3.7
include_package_data = True
zip_safe = False

[options.packages.find]
include =
    tremana
    tremana.*

[options.entry_points]
console_scripts =
    tremana=tremana.cli:main

[flake8]
exclude = docs

[darglint]
docstring_style = numpy

[pydocstyle]
convention = numpy

[aliases]
test = pytest

[rstcheck]
ignore_directives = autoattribute,autoclass,autoexception,autofunction,automethod,automodule,highlight
